# ShmupMaker

./: CMakeLists.txt  ShmupMaker.h.in  configs.cpp  configs.h  defs.h  main.cpp  sprites.cpp  sprites.h
confs/: config.json  player.json
confs/items/: crafting_recipes.json  gatling.json  items.json  omni_gatling.json  t1_trash_loottable.json
confs/levels/: level1.json
confs/levels/segments/: level_part.json
confs/mobs/: enemy1.json
